# 0-memory

./: AGENT_WORK_PLAN.md  CODE_REVIEW.md  Cargo.toml  EXECUTION_PLAN.md  README.md  example_memory.0  schema.0
examples/: example_memory.0
schema/: compatibility.md  schema.0
src/: lib.rs  runtime_trait.rs  types.rs
src/adapters/: mod.rs  openclaw.rs
src/compiler/: emitter.rs  hasher.rs  mod.rs  normalizer.rs
src/store/: graph.rs  index.rs  mod.rs
tests/: compat_test.rs  compile_test.rs  hash_test.rs  integration_test.rs  store_test.rs
