[package]
name = "zero-memory"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"
description = "Agent-native memory system compiled with 0-lang"
license = "Apache-2.0"
keywords = ["ai", "memory", "agent", "0-lang", "graph"]

[lib]
name = "zero_memory"
path = "src/lib.rs"

[dependencies]
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
zero-openclaw = { path = "../0-openclaw", optional = true }
tokio = { version = "1.35", features = ["rt", "rt-multi-thread"], optional = true }

[dev-dependencies]
tokio = { version = "1.35", features = ["full"] }
zero-openclaw = { path = "../0-openclaw" }

[features]
default = []
openclaw = ["dep:zero-openclaw", "dep:tokio"]
